Сверстал header. Начинаю верстать hero

--- a/source/index.html
+++ b/source/index.html
@@ -3,21 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>etoseychas</title>
+    <title>Поклейкин</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="theme-color" content="#84bcb1">
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="favicon.png">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">    
   </head>
-  <body>
+  <body class="body">
       <div class="wrapper">
         <header class="header">
-          <nav class="nav-list">
-            
-          </nav>
+          <div class="container">
+            <nav class="nav-list">
+              <a class="nav-list__logo" href="#">
+                <img src="img/svg/logo.svg" alt="Логотип 'Поклейкин'">
+              </a>
+              <ul class="nav-list__items">
+                <li class="nav-list__item"><a href="#">Главная</a></li>
+                <li class="nav-list__item"><a href="#">Услуги</a></li>
+                <li class="nav-list__item"><a href="#">Контакты</a></li>
+                <li class="nav-list__item"><a href="#">О нас</a></li>
+              </ul>
+              <button class="nav-list__burger">
+                
+              </button>
+            </nav>
+          </div>
         </header>
         <main class="main">
           <section class="hero">
